appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to vegetable accordion"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    text: "Vegetable"
    label: "Vegetable accordion title is displayed"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Vegetable accordion"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::6"
    direction: DOWN
    speed: 40
    label: "Scroll to last  vegetable item"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Lettuce filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::1"
    label: "Romaine Lettuce filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::2"
    label: "Carrots filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::3"
    label: "Celery filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::4"
    label: "Potatoes filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::5"
    label: "Onions filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::6"
    label: "Tomatoes filter is visible"

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: UP
    speed: 40
    label: "Scroll to up to accordion"

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Vegetable accordion"

- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
