appId: "com.recipedia"
---
- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    direction: DOWN
    speed: 40
    centerElement: true
    label: "Scroll to legumes accordion"


- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    text: "Légumineuses"
    label: "Legumes accordion title is displayed in French"


- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Legumes accordion"


- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Lettuce filter is visible"


- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Legumes accordion"

# Increment accordion index for next accordion
- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
