appId: "com.recipedia"
---
# Assert accordion is displayed
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Oil and Fat accordion is displayed"

- assertVisible:
    text: "Huiles et Graisses"
    label: "Oil and Fat accordion title is displayed in French"

# Expand the accordion
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Oil and Fat accordion"

# Assert all items are visible
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Butter filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::1"
    label: "Olive Oil filter is visible"

# Collapse the accordion back
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Oil and Fat accordion"

# Increment accordion index for next accordion
- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
