appId: "com.recipedia"
---
# Assert accordion is displayed
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Sauce accordion is displayed"

- assertVisible:
    text: "Sauces"
    label: "Sauce accordion title is displayed in French"

# Expand the accordion
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Expand Sauce accordion"

# Assert all items are visible
- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::0"
    label: "Soy Sauce filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::1"
    label: "Sriracha filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::2"
    label: "Tartar Sauce filter is visible"

- assertVisible:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}::Item::3"
    label: "Tomato Sauce filter is visible"

# Collapse the accordion back
- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::${output.accordionIndex}"
    label: "Collapse Sauce accordion"

# Increment accordion index for next accordion
- evalScript: ${output.accordionIndex = output.accordionIndex + 1}
